# Racing-Game-3

./: CMakeLists.txt  README.md
assets/models/Imola/Source/: Imola6.mtl
assets/models/Mercedes/source/: mercedes.mtl  mercedes2.mtl
assets/models/MercedesWheels/source/: Wheels.mtl
assets/shaders/: GUIBlendShader.frag  GUIBlendShader.vert  OutlineShader.frag  OutlineShader.vert  SkyboxShader.frag  SkyboxShader.vert
src/JamesEngine/: Audio.cpp  Audio.h  AudioSource.cpp  AudioSource.h  BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  Collider.h  Component.cpp  Component.h  Controller.cpp  Controller.h  Core.cpp  Core.h  Entity.cpp  Entity.h  Font.h  GUI.cpp  GUI.h  Input.cpp  Input.h  JamesEngine.h  Keyboard.cpp  Keyboard.h  LightManager.h  MathsHelper.cpp  MathsHelper.h  Model.h  ModelCollider.cpp  ModelCollider.h  ModelRenderer.cpp  ModelRenderer.h  Mouse.cpp  Mouse.h  RayCollider.cpp  RayCollider.h  RaycastSystem.cpp  RaycastSystem.h  Resource.cpp  (+27 more)
src/RacingGame/: main.cpp
src/Renderer/: Font.cpp  Font.h  Mesh.cpp  Mesh.h  Model.h  RenderTexture.cpp  RenderTexture.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
